fix word-break on page

--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -37,7 +37,9 @@
     text-shadow: px2rem(1) px2rem(1) px2rem(3) rgba(#000, 0.5);
 
     & > * {
+        hyphens: auto;
         margin-bottom: px2rem(25);
+        word-break: break-all;
     }
 
     .logo {
